# snoopy

./: .gitignore  Cargo.toml  README.md  build-dep.sh
debian/: control  postinst  prerm  snoopy@.service
snoopy/: Cargo.toml  build.rs
snoopy-common/: Cargo.toml
snoopy-common/src/: lib.rs
snoopy-ebpf/: Cargo.toml
snoopy-ebpf/src/: main.rs
snoopy/src/: bpf.rs  cli.rs  main.rs  netlink.rs
