[package]
name = "snoopy"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
snoopy-common = { path = "../snoopy-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
pico-args = { workspace = true }
bytes = "1"
rtnetlink = "0.18"
futures = "0.3"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
snoopy-ebpf = { path = "../snoopy-ebpf" }

[[bin]]
name = "snoopy"
path = "src/main.rs"
